rayou18, kalau17, jlaur13/styles/imagefeed_style.css
p.underlined {
  font-family: 'Raleway', sans-serif;
  font-weight: 800;
  margin-left: 1.66%;
  font-size: 23px;
  text-transform: uppercase;
  border-bottom: 2px solid #f1f1f1;
  width: 30%;
  padding-bottom: 10px;
}

.picwrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.singlepicwrapper {
  width: 30%;
  margin: 3px;
  background-color: gray;
  /* display: grid; */
}

.picture h2 {
  /* grid-column: 1;
  grid-row: 1; */
}

div.picture {
  /* grid-column: 1;
  grid-row: 2; */
  /*border: 2px solid#2F2FA2;*/
  /*background-color:#2F2FA2AA;*/
  /*border-radius: 2px;*/
  text-align: center;
  /* margin-top: 1.66%; */
  float: left;
  width: 100%;
}

.picture img {
  width: 100%;
  box-sizing: border-box;
  padding: 1.66%;
}

div.description {
  /* grid-column: 1;
  grid-row: 3; */
}

div.deletButton {
  /* grid-column: 1;
  grid-row: 4; */
}

